--- a/customise.html
+++ b/customise.html
@@ -8,6 +8,46 @@
     <title>Customisation</title>
   </head>
   <body>
+    <body>
+      <header>
+        <h1>Logo</h1>
+        <nav>
+          <ul>
+            <li>Shop</li>
+            <li>Create Custom Soap</li>
+            <li>About Us</li>
+            <li>Workshops</li>
+            <li><img /></li>
+          </ul>
+        </nav>
+      </header>
+
+      <main id="customise_main"></main>
+
+      <footer>
+        <nav>
+          <div>
+            <h4>Getting in touch</h4>
+            <div>
+              <img />
+              <p>Adress</p>
+              <p>COPY ADRESS</p>
+            </div>
+            <div>
+              <img />
+              <p>Email</p>
+              <p>cOPY EMAIL</p>
+            </div>
+          </div>
+          <div>
+            <h4>Follow on our socials</h4>
+            <img />
+            <img />
+          </div>
+        </nav>
+      </footer>
+      <script src="js/main.js"></script>
+    </body>
     <script src="js/main.js"></script>
   </body>
 </html>
