--- a/index.html
+++ b/index.html
@@ -8,6 +8,68 @@
     <title>CustomiseMe</title>
   </head>
   <body>
+    <header>
+      <h1>Logo</h1>
+      <nav>
+        <ul>
+          <li>Shop</li>
+          <li>Create Custom Soap</li>
+          <li>About Us</li>
+          <li>Workshops</li>
+          <li><img /></li>
+        </ul>
+      </nav>
+    </header>
+    <main id="index_main">
+      <div>
+        Background IMG
+        <img />
+        <img />
+      </div>
+      <section>
+        GRID
+        <div class="shop_box">
+          <h2>Shop our favorits!</h2>
+          <a></a>
+        </div>
+        <div class="create_box">
+          <h2>Create your own soap</h2>
+          <h3>Easy and customiseable</h3>
+          <a> </a>
+        </div>
+        <img />
+        <div class="read_box">
+          <h2>Read all about us</h2>
+          <h3>Our Misson, Vision and Values</h3>
+        </div>
+        <div class="workshop_box">
+          <h2>Join our Workshops</h2>
+          <h3>Learn how to make our own sustainable soaps at home</h3>
+        </div>
+      </section>
+    </main>
+    <footer>
+      <nav>
+        <div>
+          <h4>Getting in touch</h4>
+          <div>
+            <img />
+            <p>Adress</p>
+            <p>COPY ADRESS</p>
+          </div>
+          <div>
+            <img />
+            <p>Email</p>
+            <p>cOPY EMAIL</p>
+          </div>
+        </div>
+        <div>
+          <h4>Follow on our socials</h4>
+          <img />
+          <img />
+        </div>
+      </nav>
+    </footer>
     <script src="js/main.js"></script>
   </body>
 </html>
