--- a/product.html
+++ b/product.html
@@ -8,6 +8,90 @@
     <title>Product</title>
   </head>
   <body>
+    <body>
+      <header>
+        <h1>Logo</h1>
+        <nav>
+          <ul>
+            <li>Shop</li>
+            <li>Create Custom Soap</li>
+            <li>About Us</li>
+            <li>Workshops</li>
+            <li><img /></li>
+          </ul>
+        </nav>
+      </header>
+
+      <main id="product_main">
+        <div>
+          <section>
+            <h1 class="singleProduct_name">Name</h1>
+            <p class="singleProduct_price">Price</p>
+            <img />
+            <div>
+              <h3>Ingrediants</h3>
+              <p>COPY INGREDIANTS</p>
+            </div>
+            <div>
+              <h3>Essential Oils</h3>
+              <p class="singleProduct_oils">Oils here</p>
+            </div>
+            <div>
+              <h3>Colour</h3>
+              <p class="singleProduct_colour">Colours here</p>
+            </div>
+            <div>
+              <h3>Shape</h3>
+              <p class="singleProduct_shape">shape here</p>
+            </div>
+          </section>
+          Line here
+          <section>
+            <p>*Certified Organic products</p>
+            <p>
+              Weight approx
+              <span class="singleProduct_weight">weight here</span> gr
+            </p>
+            <p>
+              Availability
+              <span class="singleProduct_availability"
+                >availability here, bold</span
+              >
+            </p>
+            <div>
+              <div>
+                <p>1</p>
+              </div>
+              <button>Add to bag</button>
+            </div>
+          </section>
+        </div>
+      </main>
+
+      <footer>
+        <nav>
+          <div>
+            <h4>Getting in touch</h4>
+            <div>
+              <img />
+              <p>Adress</p>
+              <p>COPY ADRESS</p>
+            </div>
+            <div>
+              <img />
+              <p>Email</p>
+              <p>cOPY EMAIL</p>
+            </div>
+          </div>
+          <div>
+            <h4>Follow on our socials</h4>
+            <img />
+            <img />
+          </div>
+        </nav>
+      </footer>
+      <script src="js/main.js"></script>
+    </body>
     <script src="js/main.js"></script>
   </body>
 </html>
