--- a/shop.html
+++ b/shop.html
@@ -8,6 +8,65 @@
     <title>Shop</title>
   </head>
   <body>
+    <header>
+      <h1>Logo</h1>
+      <nav>
+        <ul>
+          <li>Shop</li>
+          <li>Create Custom Soap</li>
+          <li>About Us</li>
+          <li>Workshops</li>
+          <li><img /></li>
+        </ul>
+      </nav>
+    </header>
+
+    <main id="shop_main">
+      <section>
+        <nav>
+          <button>See all</button>
+          <button>Soaps</button>
+          <button>Shampoo bars</button>
+          <button>Lip-balm</button>
+          <button>Hand creme</button>
+        </nav>
+      </section>
+      <section>
+        <template id="shop_template">
+          <div class="overall_shopItem">
+            <div class="inner_shopItem">
+              <img />
+              <h3 class="shop_name">Name</h3>
+              <h4 class="shop_price">Price</h4>
+            </div>
+            <button>Add to bag</button>
+          </div>
+        </template>
+      </section>
+    </main>
+
+    <footer>
+      <nav>
+        <div>
+          <h4>Getting in touch</h4>
+          <div>
+            <img />
+            <p>Adress</p>
+            <p>COPY ADRESS</p>
+          </div>
+          <div>
+            <img />
+            <p>Email</p>
+            <p>cOPY EMAIL</p>
+          </div>
+        </div>
+        <div>
+          <h4>Follow on our socials</h4>
+          <img />
+          <img />
+        </div>
+      </nav>
+    </footer>
     <script src="js/main.js"></script>
   </body>
 </html>
