dynamic + base button

--- a/shop.html
+++ b/shop.html
@@ -23,7 +23,7 @@
 
     <main id="shop_main">
       <section>
-        <nav>
+        <nav class="categories">
           <button>See all</button>
           <button>Soaps</button>
           <button>Shampoo bars</button>
@@ -31,7 +31,7 @@
           <button>Hand creme</button>
         </nav>
       </section>
-      <section>
+      <section class="dynamic_content">
         <template id="shop_template">
           <div class="overall_shopItem">
             <div class="inner_shopItem">
@@ -67,6 +67,6 @@
         </div>
       </nav>
     </footer>
-    <script src="js/main.js"></script>
+    <script src="js/shop.js"></script>
   </body>
 </html>
