added grid and styling

--- a/shop.html
+++ b/shop.html
@@ -35,7 +35,7 @@
         <template id="shop_template">
           <div class="overall_shopItem">
             <div class="inner_shopItem">
-              <img />
+              <img class="shop_img" />
               <h3 class="shop_name">Name</h3>
               <h4 class="shop_price">Price</h4>
             </div>
