--- a/shop.html
+++ b/shop.html
@@ -16,7 +16,7 @@
           <li>Create Custom Soap</li>
           <li>About Us</li>
           <li>Workshops</li>
-          <li><img /></li>
+          <li><img src="assets/cart-icon.svg" alt="cartIcon" /></li>
         </ul>
       </nav>
     </header>
