--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-      <h1>Logo</h1>
+      <img class="logo" src="assets/logotype.svg" alt="logotype" />
       <nav>
         <ul>
           <li>Shop</li>
