updating header to secondary pages html

--- a/shop.html
+++ b/shop.html
@@ -9,14 +9,16 @@
   </head>
   <body>
     <header>
-      <h1>Logo</h1>
+      <img class="logo" src="assets/logotype.svg" alt="logotype" />
       <nav>
         <ul>
-          <li>Shop</li>
-          <li>Create Custom Soap</li>
-          <li>About Us</li>
-          <li>Workshops</li>
-          <li><img src="assets/cart-icon.svg" alt="cartIcon" /></li>
+          <li><a href="shop.html">Shop</a></li>
+          <li><a href="customise.html">Create Custom Soap</a></li>
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Workshops</a></li>
+          <li>
+            <a href="#"><img src="assets/cart-icon.svg" alt="cartIcon" /></a>
+          </li>
         </ul>
       </nav>
     </header>
