setting basic footer structure

--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
     </main>
     <footer>
       <nav>
-        <div>
-          <h4>Getting in touch</h4>
+        <div class="info">
+          <h4>Getting in touch!</h4>
           <div>
             <img src="assets/cart-icon.svg" alt="adressIcon" />
-            <p>Adress</p>
+
             <p>Address Falen 21D, 2TV 5000 Odense C</p>
           </div>
           <div>
@@ -65,8 +65,8 @@
             <p>info@customiseme.dk</p>
           </div>
         </div>
-        <div>
-          <h4>Follow on our socials</h4>
+        <div class="social">
+          <h4>Follow on our socials!</h4>
           <img src="assets/cart-icon.svg" alt="FBicon" />
           <img src="assets/cart-icon.svg" alt="InstagramIcon" />
         </div>
