Editig phone view of footer, linking logo to home

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   </head>
   <body>
     <header>
-      <img class="logo" src="assets/logotype.svg" alt="logotype" />
+      <a class="logo" href="index.html">
+        <img src="assets/logotype.svg" alt="logotype" />
+      </a>
       <nav>
         <ul>
           <li><a href="shop.html">Shop</a></li>
