--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <li><a href="customise.html">Create Custom Soap</a></li>
           <li><a href="#">About Us</a></li>
           <li><a href="#">Workshops</a></li>
-          <li>
+          <li class="cart">
             <a href="#"><img src="assets/cart-icon.svg" alt="cartIcon" /></a>
           </li>
         </ul>
