basic burger menu function

--- a/index.html
+++ b/index.html
@@ -8,10 +8,16 @@
     <title>CustomiseMe</title>
   </head>
   <body>
+    <!--top navigation-->
     <header>
-      <a class="logo" href="index.html">
-        <img src="assets/logotype.svg" alt="logotype" />
-      </a>
+      <div class="topNav">
+        <a class="logo" href="index.html">
+          <img src="assets/logotype.svg" alt="logotype" />
+        </a>
+        <!--Inserting the menu icon-->
+        <img class="menu" src="assets/menu-icon.svg" alt="menu-icon" />
+      </div>
+      <!--hidden navigation-->
       <nav>
         <ul>
           <li><a href="shop.html">Shop</a></li>
