--- a/product.html
+++ b/product.html
@@ -9,21 +9,28 @@
   </head>
   <body>
     <body>
+      <!--top navigation-->
       <header>
-        <img class="logo" src="assets/logotype.svg" alt="logotype" />
+        <div class="topNav">
+          <a class="logo" href="index.html">
+            <img src="assets/logotype.svg" alt="logotype" />
+          </a>
+          <!--Inserting the menu icon-->
+          <img class="menu" src="assets/menu-icon.svg" alt="menu-icon" />
+        </div>
+        <!--hidden navigation-->
         <nav>
           <ul>
             <li><a href="shop.html">Shop</a></li>
             <li><a href="customise.html">Create Custom Soap</a></li>
             <li><a href="#">About Us</a></li>
             <li><a href="#">Workshops</a></li>
-            <li>
+            <li class="cart">
               <a href="#"><img src="assets/cart-icon.svg" alt="cartIcon" /></a>
             </li>
           </ul>
         </nav>
       </header>
-
       <main id="product_main">
         <div>
           <section>
