pasting footer updates on sec pages

--- a/shop.html
+++ b/shop.html
@@ -57,23 +57,23 @@
 
     <footer>
       <nav>
-        <div>
-          <h4>Getting in touch</h4>
+        <div class="info">
+          <h4>Getting in touch!</h4>
           <div>
-            <img />
-            <p>Adress</p>
-            <p>COPY ADRESS</p>
+            <img src="assets/cart-icon.svg" alt="adressIcon" />
+
+            <p>Address Falen 21D, 2TV 5000 Odense C</p>
           </div>
           <div>
-            <img />
-            <p>Email</p>
-            <p>cOPY EMAIL</p>
+            <img src="assets/cart-icon.svg" alt="emailIcon" />
+            <p>Send us an e-mail:</p>
+            <p>info@customiseme.dk</p>
           </div>
         </div>
-        <div>
-          <h4>Follow on our socials</h4>
-          <img />
-          <img />
+        <div class="social">
+          <h4>Follow on our socials!</h4>
+          <img src="assets/cart-icon.svg" alt="FBicon" />
+          <img src="assets/cart-icon.svg" alt="InstagramIcon" />
         </div>
       </nav>
     </footer>
