--- a/shop.html
+++ b/shop.html
@@ -25,11 +25,11 @@
       <h1>See all products</h1>
       <section>
         <nav class="categories">
-          <button href="shop.html">See all</button>
-          <button>Soaps</button>
-          <button>Shampoo bars</button>
-          <button>Lip-balm</button>
-          <button>Hand creme</button>
+          <a href="shop.html?Category=all">See all</a>
+          <a href="shop.html?Category=Base_product">Soaps</a>
+          <a href="shop.html?Category=Shampoo">Shampoo bars</a>
+          <a href="shop.html?Category=Lip_balm">Lip-balm</a>
+          <a href="shop.html?Category=Hand_creme">Hand creme</a>
         </nav>
       </section>
       <section class="dynamic_content">
