--- a/shop.html
+++ b/shop.html
@@ -60,20 +60,20 @@
         <div class="info">
           <h4>Getting in touch!</h4>
           <div>
-            <img src="assets/cart-icon.svg" alt="adressIcon" />
+            <img src="assets/adress-icon.svg" alt="adressIcon" />
 
             <p>Address Falen 21D, 2TV 5000 Odense C</p>
           </div>
           <div>
-            <img src="assets/cart-icon.svg" alt="emailIcon" />
+            <img src="assets/email-icon.svg" alt="emailIcon" />
             <p>Send us an e-mail:</p>
             <p>info@customiseme.dk</p>
           </div>
         </div>
         <div class="social">
           <h4>Follow on our socials!</h4>
-          <img src="assets/cart-icon.svg" alt="FBicon" />
-          <img src="assets/cart-icon.svg" alt="InstagramIcon" />
+          <img src="assets/fb-icon.svg" alt="FBicon" />
+          <img src="assets/insta-icon.svg" alt="InstagramIcon" />
         </div>
       </nav>
     </footer>
