--- a/customise.html
+++ b/customise.html
@@ -31,6 +31,7 @@
           </ul>
         </nav>
       </header>
+      </header>
 
       <main id="customise_main"></main>
 
@@ -58,6 +59,5 @@
       </footer>
       <script src="js/main.js"></script>
     </body>
-    <script src="js/main.js"></script>
-  </body>
+   
 </html>
