--- a/product.html
+++ b/product.html
@@ -26,12 +26,14 @@
         <div>
           <h1 class="singleProduct_name">Calming soap</h1>
           <p class="singleProduct_price">DKK 55,00</p>
+          <section id="all_product_info">
           <div id="product_image">
             <img class="single_img" />
           </div>
 
+          
           <section id="product_info">
-            <div id="ingredients">
+            <div>
               <h3>Ingredients</h3>
               <p>Coconut oil*,</p>
               <p>Olive oil*,</p>
@@ -39,21 +41,22 @@
               <p>Distilled water</p>
             </div>
 
-            <div id="essential_oils">
+            <div>
               <h3>Essential Oils</h3>
               <p class="singleProduct_oils">Oils here</p>
             </div>
 
-            <div id="color">
+            <div>
               <h3>Color</h3>
               <p class="singleProduct_colour">Colours here</p>
             </div>
 
-            <div id="shape">
+            <div>
               <h3>Shape</h3>
               <p class="singleProduct_shape">shape here</p>
             </div>
           </section>
+        </section>
 
           <section id="more_info">
             <p>*Certified Organic products</p>
@@ -65,9 +68,9 @@
           </section>
           <div id="availability">
             <p>
-              Availability
+              Availability:
               <span class="singleProduct_availability"
-                ><b>Availability here</b></span
+                ><b>IN STOCK</b></span
               >
             </p>
           </div>
@@ -78,7 +81,8 @@
             </div>
             <button>ADD TO BAG</button>
           </section>
-        </div>
+        
+
       </main>
 
       <footer>
@@ -105,6 +109,5 @@
       </footer>
       <script src="js/main.js"></script>
     </body>
-    <script src="js/main.js"></script>
   </body>
 </html>
