basic html structure part 1

--- a/customise.html
+++ b/customise.html
@@ -22,7 +22,74 @@
         </nav>
       </header>
 
-      <main id="customise_main"></main>
+      <main id="customise_main">
+        <div class="topPart">
+          <h1>Create Custom Soap</h1>
+          <div class="ingredients">
+            <h2>Ingredients</h2>
+            <p>Coconut oil*, Olive oil*, Shea butter*, Distilled water</p>
+          </div>
+          <div class="instructions">
+            <h2>Instructions</h2>
+            <p>
+              We recomment only choosing 2 essential oils per soap. This means
+              either head + heart, heart + base or base + head.
+            </p>
+            <p>Read more of the difference in the section below!</p>
+            <p>
+              Minimum order for a fully customised product is 4 bars of soap.
+            </p>
+          </div>
+          <div class="interaction">
+            <div class="soap"></div>
+            <div class="baseNote"></div>
+            <div class="headNote"></div>
+            <div class="heartNote"></div>
+          </div>
+
+          <form class="shape">
+            <h2>Choose a shape for your soap:</h2>
+            <input type="radio" name="shape" id="heart" />
+            <label for="heart">Heart (+ DKK 5,00)</label>
+            <input type="radio" name="shape" id="rectagular" />
+            <label for="rectangualr">Rectangular (+ DKK 5,00)</label>
+            <input type="radio" name="shape" id="round" />
+            <label for="round">Round (+ DKK 5,00)</label>
+            <input type="radio" name="shape" id="square" />
+            <label for="square">Square (+ DKK 5,00)</label>
+            <input type="radio" name="shape" id="star" />
+            <label for="star">Star (+ DKK 5,00)</label>
+            <input type="radio" name="shape" id="oval" />
+            <label for="oval">Oval (+ DKK 5,00)</label>
+            <input type="radio" name="shape" id="surprise" />
+            <label for="surprise">Surprise Us</label>
+          </form>
+
+          <form class="color">
+            <h2>Choose a color for your soap:</h2>
+            <input type="radio" name="shape" id="white" />
+            <label for="white">White (+ DKK 5,00)</label>
+            <input type="radio" name="shape" id="black" />
+            <label for="black">Black (+ DKK 5,00)</label>
+            <input type="radio" name="shape" id="pink" />
+            <label for="pink">Pink (+ DKK 5,00)</label>
+            <input type="radio" name="shape" id="lightBlue" />
+            <label for="lightBlue">Light Blue(+ DKK 5,00)</label>
+            <input type="radio" name="shape" id="purple" />
+            <label for="purple">Purple (+ DKK 5,00)</label>
+            <input type="radio" name="shape" id="orange" />
+            <label for="orange">Orange (+ DKK 5,00)</label>
+            <input type="radio" name="shape" id="red" />
+            <label for="red">Red (+ DKK 5,00)</label>
+            <input type="radio" name="shape" id="blue" />
+            <label for="blue">Blue (+ DKK 5,00)</label>
+            <input type="radio" name="shape" id="yellow" />
+            <label for="yellow">Yellow (+ DKK 5,00)</label>
+            <input type="radio" name="shape" id="none" />
+            <label for="none">No Color</label>
+          </form>
+        </div>
+      </main>
 
       <footer>
         <nav>
