--- a/shop.html
+++ b/shop.html
@@ -22,7 +22,7 @@
     </header>
 
     <main id="shop_main">
-      <h1>See all products</h1>
+      <h1 class="ShopPlace">See all products</h1>
       <section>
         <nav class="categories">
           <a href="shop.html?Category=all">See all</a>
