setting html structure - pricing detalis

--- a/customise.html
+++ b/customise.html
@@ -148,6 +148,20 @@
             <label for="comments">If you have any allergies, let us know here:</label>
             <textarea name="message" placeholder="Write your message here" rows="5" cols="50" id="comments"></textarea>
           </form>
+          <div class="report">
+            <div class="productTot">
+              <p>Product total</p>
+              <p>DKK XX,00</p>
+            </div>
+            <div class="optionsTot">
+              <p>Options total</p>
+              <p>DKK XX,00</p>
+            </div>
+            <div class="grandTot">
+              <p>Grand total</p>
+              <p>DKK XX,00</p>
+            </div>
+          </div>
         </div>
       </main>
 
