basic html structure - check out buttons

--- a/customise.html
+++ b/customise.html
@@ -162,6 +162,13 @@
               <p>DKK XX,00</p>
             </div>
           </div>
+          <section class="checkOut">
+            <div id="amount">
+              <p>1</p>
+            </div>
+            <button>ADD TO BAG</button>
+            <button>BUY NOW</button>
+          </section>
         </div>
       </main>
 
