--- a/shop.html
+++ b/shop.html
@@ -42,6 +42,11 @@
           <a href="shop.html?Category=Hand_creme">Hand creme</a>
         </nav>
       </section>
+
+      <div id="preloader">
+        <div id="status"></div>
+      </div>
+
       <section class="dynamic_content">
         <template id="shop_template">
           <div class="overall_shopItem">
@@ -80,6 +85,10 @@
         </div>
       </nav>
     </footer>
+    <script
+      src="https://code.jquery.com/jquery-1.12.4.min.js"
+      type="text/javascript"
+    ></script>
     <script src="js/shop.js"></script>
   </body>
 </html>
