topPart basic css desiogn

--- a/customise.html
+++ b/customise.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/customise.css" />
+    <link rel="stylesheet" href="css/customise.css"/>
     <title>Customisation</title>
   </head>
   <body>
@@ -22,7 +22,7 @@
         </nav>
       </header>
 
-      <main id="customise_main">
+      <main>
         <div class="topPart">
           <h1>Create Custom Soap</h1>
           <div class="interaction">
