--- a/customise.html
+++ b/customise.html
@@ -90,7 +90,7 @@
           </form>
         </div>
         <div class="mainPart">
-          <artcle class="notesInfo">
+          <article class="notesInfo">
             <h2>Essential oils - know the difference</h2>
             <section >
               <h3>HEAD NOTE</h3>
