buy now button added

--- a/product.html
+++ b/product.html
@@ -89,6 +89,9 @@
             </div>
             <button>ADD TO BAG</button>
           </section>
+          <div id="buynow">
+          <button>BUY NOW!</button>
+        </div>
         
 
       </main>
