--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <!--hidden navigation-->
       <nav>
         <ul>
-          <li><a href="shop.html">Shop</a></li>
+          <li><a href="shop.html?Category=all">Shop</a></li>
           <li><a href="customise.html">Create Custom Soap</a></li>
           <li><a href="#">About Us</a></li>
           <li><a href="#">Workshops</a></li>
