--- a/index.html
+++ b/index.html
@@ -30,31 +30,49 @@
         </ul>
       </nav>
     </header>
+
     <main id="index_main">
-      <div>
-        Background IMG
-        <img />
-        <img />
+      <div class="logo_box">
+        <img src="indeximages/shelf-pic.png" alt="shelf" class="shelf" />
+        <img
+          src="indeximages/Logo-negative.svg"
+          alt="logo-negative"
+          class="logo-negative"
+        />
       </div>
+
       <section>
-        GRID
-        <div class="shop_box">
-          <h2>Shop our favorits!</h2>
-          <a></a>
-        </div>
         <div class="create_box">
-          <h2>Create your own soap</h2>
-          <h3>Easy and customiseable</h3>
-          <a> </a>
+          <h2 class="create-text">Create your own soap</h2>
+          <h3 class="HideThis">Easy and customiseable</h3>
+          <img src="indeximages/leaf-small.svg" alt="leaf" class="leaf-1" />
+
+          <a class="positionCreateButton HideThis">Take me there!</a>
         </div>
-        <img />
+        <div class="shop_box">
+          <img src="indeximages/leaf-backwards.svg" alt="leaf" class="leaf-2" />
+          <h2 class="right-align-text">Shop our favorites!</h2>
+          <a class="HideInMobileVersion positionShopButton">Go to shop</a>
+        </div>
         <div class="read_box">
-          <h2>Read all about us</h2>
-          <h3>Our Misson, Vision and Values</h3>
+          <h2 class="read-all">Read all about us</h2>
+          <h3 class="HideThis mission-vision">Our Misson, Vision and Values</h3>
+          <img src="indeximages/leaf-small.svg" alt="leaf" class="leaf-1" />
         </div>
         <div class="workshop_box">
-          <h2>Join our Workshops</h2>
-          <h3>Learn how to make our own sustainable soaps at home</h3>
+          <img src="indeximages/leaf-backwards.svg" alt="leaf" class="leaf-2" />
+          <h2 class="right-align-text2">Join our Workshops</h2>
+          <h3 class="HideThis">Make your own sustainable soap at home!</h3>
+          <img
+            src="indeximages/bottom-twirl.png"
+            alt="bottom-twirl"
+            class="bottom-twirl HideThisInMobile"
+          />
+          <img
+            src="indeximages/plant.svg"
+            alt="plant"
+            class="plant HideThisInMobile"
+          />
         </div>
       </section>
     </main>
