--- a/index.html
+++ b/index.html
@@ -47,12 +47,18 @@
           <h3 class="HideThis">Easy and customiseable</h3>
           <img src="indeximages/leaf-small.svg" alt="leaf" class="leaf-1" />
 
-          <a class="positionCreateButton HideThis">Take me there!</a>
+          <a class="positionCreateButton HideThis" href="customise.html"
+            >Take me there!</a
+          >
         </div>
         <div class="shop_box">
           <img src="indeximages/leaf-backwards.svg" alt="leaf" class="leaf-2" />
           <h2 class="right-align-text">Shop our favorites!</h2>
-          <a class="HideInMobileVersion positionShopButton">Go to shop</a>
+          <a
+            class="HideInMobileVersion positionShopButton"
+            href="shop.html?Category=all"
+            >Go to shop</a
+          >
         </div>
         <div class="read_box">
           <h2 class="read-all">Read all about us</h2>
@@ -99,6 +105,5 @@
         </div>
       </nav>
     </footer>
-    <script src="js/main.js"></script>
   </body>
 </html>
