Better,fucking,work

--- a/customise.html
+++ b/customise.html
@@ -205,7 +205,8 @@
           </div>
         </nav>
       </footer>
-      <script src="js/main.js"></script>
+      <!-- <script src="js/main.js"></script> -->
+      <script src="js/burger.js"></script>
     </body>
   </body>
 </html>
