--- a/product.html
+++ b/product.html
@@ -116,6 +116,7 @@
         </nav>
       </footer>
       <script src="js/main.js"></script>
+      <script src="js/burger.js"></script>
     </body>
   </body>
 </html>
