--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
 
       <section>
         <div class="create_box">
-          <h2 class="create-text">Create your own soap</h2>
+          <a class="noShit" href="customise.html"
+            ><h2 class="create-text">Create your own soap</h2></a
+          >
           <h3 class="HideThis">Easy and customiseable</h3>
           <img src="indeximages/leaf-small.svg" alt="leaf" class="leaf-1" />
 
@@ -53,7 +55,9 @@
         </div>
         <div class="shop_box">
           <img src="indeximages/leaf-backwards.svg" alt="leaf" class="leaf-2" />
-          <h2 class="right-align-text">Shop our favorites!</h2>
+          <a class="noShit" href="shop.html"
+            ><h2 class="right-align-text">Shop our favorites!</h2></a
+          >
           <a
             class="HideInMobileVersion positionShopButton"
             href="shop.html?Category=all"
