--- a/index.html
+++ b/index.html
@@ -43,23 +43,25 @@
 
       <section>
         <div class="create_box">
-          <a class="noShit" href="customise.html"
+          <a class="createLinkPhone" href="customise.html"
             ><h2 class="create-text">Create your own soap</h2></a
           >
           <h3 class="HideThis">Easy and customiseable</h3>
           <img src="indeximages/leaf-small.svg" alt="leaf" class="leaf-1" />
 
-          <a class="positionCreateButton HideThis" href="customise.html"
+          <a
+            class="positionCreateButton HideThis indexButton"
+            href="customise.html"
             >Take me there!</a
           >
         </div>
         <div class="shop_box">
           <img src="indeximages/leaf-backwards.svg" alt="leaf" class="leaf-2" />
-          <a class="noShit" href="shop.html"
+          <a class="shopLinkPhone" href="shop.html"
             ><h2 class="right-align-text">Shop our favorites!</h2></a
           >
           <a
-            class="HideInMobileVersion positionShopButton"
+            class="HideInMobileVersion positionShopButton indexButton"
             href="shop.html?Category=all"
             >Go to shop</a
           >
