--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </div>
         <div class="shop_box">
           <img src="indeximages/leaf-backwards.svg" alt="leaf" class="leaf-2" />
-          <a class="shopLinkPhone" href="shop.html"
+          <a class="shopLinkPhone" href="shop.html?Category=all"
             ><h2 class="right-align-text">Shop our favorites!</h2></a
           >
           <a
